--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,8 @@ dependencies:
   http: ^0.12.2
   shared_preferences: ^0.5.12+4
   velocity_x: ^1.0.1
-
+  razorpay_flutter: ^1.2.2
+  toast: ^0.1.5
 
 
 
